--- a/EntityLayer/EntityLayer.csproj
+++ b/EntityLayer/EntityLayer.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Concrete\Admin.cs" />
+    <Compile Include="Concrete\Document.cs" />
     <Compile Include="Concrete\DocumentSignature.cs" />
     <Compile Include="Concrete\Student.cs" />
     <Compile Include="Concrete\DocumentType.cs" />
