--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -60,9 +60,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IAdminService.cs" />
     <Compile Include="Abstract\IDocumentTypeService.cs" />
+    <Compile Include="Concrete\AdminManager.cs" />
     <Compile Include="Concrete\DocumentTypeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationRules\AdminValidator.cs" />
     <Compile Include="ValidationRules\DocumentTypeValidator.cs" />
   </ItemGroup>
   <ItemGroup>
