--- a/DocumentManagementSystem/bin/DocumentManagementSystem.dll.config
+++ b/DocumentManagementSystem/bin/DocumentManagementSystem.dll.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <add name="Context" connectionString="data source=DESKTOP-7CEF0R1;      initial catalog=DocumentSystem; integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="data source=DESKTOP-7CEF0R1;      initial catalog=DocumentSystem2; integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
