--- a/DocumentManagementSystem/DocumentManagementSystem.csproj
+++ b/DocumentManagementSystem/DocumentManagementSystem.csproj
@@ -2410,6 +2410,7 @@
     <Content Include="Views\DocumentType\GetDocumentTypeList.cshtml" />
     <Content Include="Views\DocumentType\EditDocumentType.cshtml" />
     <Content Include="Views\Admin\AddAdmin.cshtml" />
+    <Content Include="Views\Shared\_SidebarsLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
