--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -62,11 +62,14 @@
   <ItemGroup>
     <Compile Include="Abstract\IAdminService.cs" />
     <Compile Include="Abstract\IDocumentTypeService.cs" />
+    <Compile Include="Abstract\IStudentService.cs" />
     <Compile Include="Concrete\AdminManager.cs" />
     <Compile Include="Concrete\DocumentTypeManager.cs" />
+    <Compile Include="Concrete\StudentManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\AdminValidator.cs" />
     <Compile Include="ValidationRules\DocumentTypeValidator.cs" />
+    <Compile Include="ValidationRules\StudentValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
