--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -52,12 +52,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IAdminDal.cs" />
+    <Compile Include="Abstract\IDocumentDal.cs" />
+    <Compile Include="Abstract\IDocumentSignatureDal.cs" />
     <Compile Include="Abstract\IDocumentTypeDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="Abstract\IStudentDal.cs" />
     <Compile Include="Concrete\Context.cs" />
     <Compile Include="Concrete\Repositories\GenericRepository.cs" />
     <Compile Include="EntityFramework\EfAdminDal.cs" />
+    <Compile Include="EntityFramework\EfDocumentDal.cs" />
+    <Compile Include="EntityFramework\EfDocumentSignatureDal.cs" />
     <Compile Include="EntityFramework\EfDocumentTypeDal.cs" />
+    <Compile Include="EntityFramework\EfStudentDal.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
