--- a/DocumentManagementSystem/DocumentManagementSystem.csproj
+++ b/DocumentManagementSystem/DocumentManagementSystem.csproj
@@ -2421,13 +2421,12 @@
     <Content Include="Views\DocumentType\DocumentTypeList.cshtml" />
     <Content Include="Views\DocumentType\UpdateDocumentType.cshtml" />
     <Content Include="Views\Student\deneme.cshtml" />
+    <Content Include="Views\Document\AddDocument.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="image\documentTypeImage\" />
     <Folder Include="image\signature\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\Document\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
