--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -62,11 +62,13 @@
   <ItemGroup>
     <Compile Include="Abstract\IAdminService.cs" />
     <Compile Include="Abstract\IDocumentService.cs" />
+    <Compile Include="Abstract\IDocumentSignatureService.cs" />
     <Compile Include="Abstract\IDocumentTypeService.cs" />
     <Compile Include="Abstract\IDocumentTypeSignatureService.cs" />
     <Compile Include="Abstract\IStudentService.cs" />
     <Compile Include="Concrete\AdminManager.cs" />
     <Compile Include="Concrete\DocumentManager.cs" />
+    <Compile Include="Concrete\DocumentSignatureManager.cs" />
     <Compile Include="Concrete\DocumentTypeManager.cs" />
     <Compile Include="Concrete\DocumentTypeSignatureManager.cs" />
     <Compile Include="Concrete\StudentManager.cs" />
