--- a/DocumentManagementSystem/DocumentManagementSystem.csproj
+++ b/DocumentManagementSystem/DocumentManagementSystem.csproj
@@ -2028,12 +2028,15 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\DocumentTemplate1.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="image\site\BozokIcon.png" />
+    <Content Include="image\site\imza3.png" />
     <Content Include="image\site\none.png" />
+    <Content Include="image\site\signature.png" />
     <Content Include="image\site\user.png" />
     <Content Include="Notlar.txt" />
     <Content Include="Rotativa\help-wkhtmltoimage.txt" />
@@ -2435,6 +2438,7 @@
     <Content Include="Views\Student\deneme.cshtml" />
     <Content Include="Views\Document\AddDocument.cshtml" />
     <Content Include="Views\Document\CreateDocument.cshtml" />
+    <Content Include="Views\Document\GeneratePDF.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
