--- a/DocumentManagementSystem/DocumentManagementSystem.csproj
+++ b/DocumentManagementSystem/DocumentManagementSystem.csproj
@@ -2441,6 +2441,7 @@
     <Content Include="Views\Document\VievHTMLDocument.cshtml" />
     <Content Include="Views\Document\GeneratePDF.cshtml" />
     <Content Include="Views\Document\DocumentList.cshtml" />
+    <Content Include="Views\Document\DocumentVerification.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
