--- a/DocumentManagementSystem/bin/DocumentManagementSystem.dll.config
+++ b/DocumentManagementSystem/bin/DocumentManagementSystem.dll.config
@@ -20,6 +20,11 @@
     <authentication mode="Forms">
       <forms loginUrl="/Home/SignIn/"></forms>
     </authentication>
+    <roleManager enabled="true" defaultProvider="TestRoleProvider">
+      <providers>
+        <add name="TestRoleProvider" type="DocumentManagementSystem.Roles.AdminRoleProvider"/>
+      </providers>
+    </roleManager>
   </system.web>
   <connectionStrings>
     <add name="Context" connectionString="data source=DESKTOP-7CEF0R1;      initial catalog=DocumentSystem15; integrated security=true;" providerName="System.Data.SqlClient" />
