--- a/DocumentManagementSystem/DocumentManagementSystem.csproj
+++ b/DocumentManagementSystem/DocumentManagementSystem.csproj
@@ -2353,6 +2353,7 @@
     <Content Include="Views\StudentPanel\Documents.cshtml" />
     <Content Include="Views\StudentPanel\Index.cshtml" />
     <Content Include="Views\Document\VievPDFDocument.cshtml" />
+    <Content Include="Views\Admin\AdminProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ApiModels\" />
