--- a/DocumentManagementSystem/Web.config
+++ b/DocumentManagementSystem/Web.config
@@ -15,6 +15,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/ErrorPage/Page404"/>
+      <error statusCode="400" redirect="/ErrorPage/Page400"/>
+      <error statusCode="503" redirect="/ErrorPage/Page503"/>
+      <error statusCode="500" redirect="/ErrorPage/Page500"/>
+      <error statusCode="401" redirect="/ErrorPage/Page401"/>
+      
+    </customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
